irc-network-chooser: fix missing button label

...by adding a missing chain-up to the parent GtkButton's constructed().

https://bugzilla.gnome.org/show_bug.cgi?id=738315